feat: add main block and css

--- a/travel/style.css
+++ b/travel/style.css
@@ -380,5 +380,5 @@ footer {
 }
 
 .ico_insta {
-    background-image: url(../travel/images/);
+    background-image: url(../travel/images/insta.svg)
 }
