--- a/travel/style.css
+++ b/travel/style.css
@@ -1,7 +1,16 @@
+html {
+    scroll-behavior: smooth;
+  }
+
 body {
     max-width: 1440px;
     margin: 0;
-    padding: 0;
+    padding: 0; 
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
 h1 {
@@ -101,6 +110,7 @@ header {
     padding: 0 20px;
     cursor: pointer;
     transition: all .3s;
+    scroll-behavior: smooth;
 }
 .navigation_link:hover {
     color: gray;
@@ -316,7 +326,7 @@ header {
 .story {
     display: flex;
     align-items: center;
-    padding: 0 120px 30px 120px;
+    padding: 30px 120px 0 120px;
 }
 
 .story_img {
@@ -367,7 +377,7 @@ header {
 footer {
     display: flex;
     justify-content: center;
-
+    align-items: center;
 }
 
 .text_footer{
@@ -380,5 +390,22 @@ footer {
 }
 
 .ico_insta {
-    background-image: url(../travel/images/insta.svg)
+    background-image: url(../travel/images/insta.svg);
+    width: 31px;
+    height: 31px;
+    margin-right: 25px;
 }
+
+.ico_youtube {
+    background-image: url(../travel/images/tube.svg);
+    width: 31px;
+    height: 28px;
+    margin-right: 25px;
+}
+
+.ico_twitter {
+    background-image: url(../travel/images/twit.svg);
+    width: 31px;
+    height: 28px;
+}
+
