--- a/travel/style.css
+++ b/travel/style.css
@@ -321,7 +321,9 @@ header {
     height: 40px;
     padding: 0 12px 0 0;
 }
-
+.buttondistS_img {
+    display: none;
+}
 .storie_name {
     display: flex;
     justify-content: center;
@@ -469,6 +471,12 @@ footer {
     left: 0;
 }
 
+.destination2S {
+    display: none;
+}
+.storyS_img {
+    display: none;
+}
 @media screen and (max-width: 390px) {
     .hamburger {
         display: inline-block;
@@ -506,6 +514,7 @@ footer {
     .search_text {
         font-size: 14px;
         line-height: 17px;
+        padding-right: 60px;
     }
     .button {
         font-size: 11px;
@@ -515,10 +524,177 @@ footer {
     .preview {
         padding: 50px 15px 60px 15px;
     }
-    .search_rectangle {
-        padding: 0 60px;
-    }
     body {
         max-width: 390px;
+    }
+    h2 {
+        font-size: 14px;
+        line-height: 19px;
+    }
+    .stepsh2 {
+        padding: 10px 0;
+    }
+    .three_steps {
+        padding: 0;
+        text-align: center;
+        align-items: unset;
+    }
+    h4 {
+        font-size: 10px;
+        line-height: 12px;
+    }
+    .step {
+        padding: 0 15px;
+        width: 90px;
+    }
+    .step_icon {
+        width: 70px;
+        height: 70px;
+    }
+    .icon_square {
+        width: 70px;
+        height: 70px;
+    }
+    .ico_bycicle {
+        background-image: url(../travel/images/bykeS.svg);
+        width: 35px;
+        height: 32px;
+    }
+    .ico_calendar {
+        background-image: url(../travel/images/calS.svg);
+        width: 35px;
+        height: 35px;
+    }
+    .ico_fly {
+        background-image: url(../travel/images/flyS.svg);
+        width: 40px;
+        height: 30px;
+    }
+    .destinations_name {
+        padding: 0 0 10px 0;
+    }
+    .destination1 {
+        display: none;
+    }
+    .destination3 {
+        display: none;
+    }
+    .destination2 {
+        display: none;
+        /* background-image: url(../travel/images/Rectangle\ 23S.jpg);
+        width: 360px;
+        height: 210px;
+    }
+    .destination_img{
+        display: none; */
+    }
+    .destination2S {
+        display: block;
+    }
+    .destinationS_img {
+        position: relative;
+        text-align: center;
+        color: white;
+    }
+    .destinationS_text {
+        font-family: 'Red Hat Text';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 26px;
+        color: #FFFFFF;
+        position: absolute;
+        top: -10px;
+        left: 15px;
+    }
+    .ellipse {
+        position: absolute;
+        top: 650px;
+        left: 172px;
+    }
+    .ellipse1 {
+        width: 8px;
+        height: 8px;
+    }
+    .ellipse2 {
+        width: 8px;
+        height: 8px;
+    }
+    .ellipse3 {
+        width: 8px;
+        height: 8px;
+    }
+    .buttondist_img {
+        display: none;
+    }
+    .buttondistS_img {
+        display: block;
+        width: 9px;
+        height: 5px;
+        padding-right: 5px;
+
+    }
+    .destination_button {
+        padding: 10px 0;
+    }
+    .backgroundstoriefoot {
+        background-image: url(../travel/images/Rectangle\ 27S.jpg);
+        background-size: auto;
+    }
+    h3 {
+        font-size: 11px;
+        line-height: 13px;
+        margin: 0;
+    }
+    .story_text {
+        font-size: 9px;
+        line-height: 11px;
+        margin: 10px 0 0 0;
+    }
+    .story_img {
+        display: none;
+    }
+    .storyS_img {
+        display: block;
+        filter: drop-shadow(0px 4px 4px #0D606F);
+        border-radius: 16px;
+    }
+    .story {
+        padding: 0 15px;
+        align-items: unset;
+    }
+    .story_info {
+        padding-left: 10px;
+        padding-top: 15px;
+    }
+    .story_img1 {
+        padding: 10px 0 5px 0;
+    }
+    .story_img2 {
+        padding: 10px 0 5px 0;
+    }
+    .story_img3 {
+        padding: 10px 0 5px 0;
+    }
+    .story_img4 {
+        padding: 10px 0 5px 0;
+    }
+    .buttonstory_img {
+        display: none;
+    }
+    .stories_button {
+        padding: 10px 0;
+    }
+    .text {
+        display: none;
+    }
+    footer {
+        justify-content: center;
+    }
+    .footer_ico {
+        padding: 0;
+    }
+    .social {
+        padding-right: 0;
     }
 }
