--- a/travel/style.css
+++ b/travel/style.css
@@ -503,22 +503,38 @@ footer {
 .SocialMedia {
     display: none;
 }
+
 @media screen and (max-width: 390px) {
     .hamburger {
         display: inline-block;
+        margin: 0;
     }
     .logo_name {
         display: none;
     }
+    .Account {
+        display: block;
+    }
+    .SocialMedia {
+        display: block;
+    }
     .header_navigation {
         display: none;
+        background: #F2785C;
+        border-radius: 10px;
+    }
+    .navigation {
+        display: contents;
     }
     .header_button {
         display: none;
     }
     .logo_line {
         justify-content: space-between;
-        width: 100%;
+        /* width: 100%; */
+    }
+    .header_navigation {
+        margin: -40px 0;
     }
     .header {
         padding: 45px 25px 0 16px;
