--- a/travel/style.css
+++ b/travel/style.css
@@ -1,6 +1,6 @@
 html {
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
   }
 
 body {
@@ -502,6 +502,38 @@ footer {
 }
 .SocialMedia {
     display: none;
+}
+
+.pop-up {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: rgba(20,20,20, 0.3);
+}
+.hidden {
+    visibility: hidden;
+}
+.pop-up_content {
+    width: 650px;
+    height: 660px;
+    background: linear-gradient(177.09deg, #FFFFFF 6.15%, #0D606F 202.69%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+    align-items: center;
+    justify-content: center;
+}
+.pop-up_name {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+    color: #0D606F;
 }
 
 @media screen and (max-width: 390px) {
