--- a/travel/style.css
+++ b/travel/style.css
@@ -504,28 +504,33 @@ footer {
     display: none;
 }
 
+/* Делаем popup */
 .pop-up {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     background-color: rgba(20,20,20, 0.3);
+    z-index: 1;
 }
 .hidden {
     visibility: hidden;
 }
 .pop-up_content {
+    /* position: relative; */
+    overflow: auto;
     width: 650px;
-    height: 660px;
+    height: 90%;
     background: linear-gradient(177.09deg, #FFFFFF 6.15%, #0D606F 202.69%);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 .pop-up_name {
     font-family: 'Aleo';
@@ -536,7 +541,13 @@ footer {
     color: #0D606F;
 }
 
+
 @media screen and (max-width: 390px) {
+    /* Делаем popup для mobile */
+
+
+
+    
     .hamburger {
         display: inline-block;
         margin: 0;
