--- a/travel/style.css
+++ b/travel/style.css
@@ -52,6 +52,118 @@ h4 {
     color: #0D606F;
 }
 
+
+/* Создаем popup */
+.pop-up {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: rgba(20,20,20, 0.3);
+    z-index: 1;
+}
+.hidden {
+    visibility: hidden;
+}
+.pop-up_content {
+    /* position: relative; */
+    overflow: auto;
+    width: 650px;
+    height: 90%;
+    background: linear-gradient(177.09deg, #FFFFFF 6.15%, #0D606F 202.69%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.pop-up_name {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+    color: #0D606F;
+}
+.facebook_button {
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    color: #FFFFFF;
+    background: #1877F2;
+    box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    border-radius: 10px;
+    cursor: pointer;
+    border: none;
+    transition: all .3s;
+    display: flex;
+    justify-content: center;
+    padding: 15px 160px;
+}
+.facebook_button:hover {
+    color: #F2785C;
+}
+.ico_facebook {
+    background-image: url(../travel/images/face.svg);
+    width: 23px;
+    height: 22.86px;
+    padding: 0 15px 0 0;
+    background-repeat: no-repeat;
+}
+.google_button {
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    color: #0D606F;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    border-radius: 10px;
+    cursor: pointer;
+    border: none;
+    transition: all .3s;
+    display: flex;
+    justify-content: center;
+    padding: 15px 170px;
+    margin-top: 20px;
+}
+.google_button:hover {
+    color: #F2785C;
+}
+.ico_google {
+    background-image: url(../travel/images/Untitled.svg);
+    width: 24px;
+    height: 24px;
+    padding: 0 15px 0 0;
+    background-repeat: no-repeat;
+}
+.OR_popup {
+    display: flex;
+    padding: 30px 0;
+}
+.OR_text {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    /* identical to box height */
+    color: rgba(13, 96, 111, 0.5);
+    margin: auto;
+    padding: 0 9px;
+}
+
+/* popup закончен */
+
+
+
 .backgraund_header_preview {
     background-image: url(../travel/images/main.jpg);
     background-size: cover;
@@ -504,42 +616,7 @@ footer {
     display: none;
 }
 
-/* Делаем popup */
-.pop-up {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    left: 0;
-    top: 0;
-    background-color: rgba(20,20,20, 0.3);
-    z-index: 1;
-}
-.hidden {
-    visibility: hidden;
-}
-.pop-up_content {
-    /* position: relative; */
-    overflow: auto;
-    width: 650px;
-    height: 90%;
-    background: linear-gradient(177.09deg, #FFFFFF 6.15%, #0D606F 202.69%);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 16px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.pop-up_name {
-    font-family: 'Aleo';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 38px;
-    color: #0D606F;
-}
+
 
 
 @media screen and (max-width: 390px) {
