--- a/travel/style.css
+++ b/travel/style.css
@@ -88,6 +88,7 @@ h4 {
     font-size: 32px;
     line-height: 38px;
     color: #0D606F;
+    margin: 25px 0 30px 0;
 }
 .facebook_button {
     font-family: 'Red Hat Text';
@@ -146,7 +147,7 @@ h4 {
 }
 .OR_popup {
     display: flex;
-    padding: 30px 0;
+    padding: 30px 0 20px 0;
 }
 .OR_text {
     font-family: 'Aleo';
@@ -159,7 +160,107 @@ h4 {
     margin: auto;
     padding: 0 9px;
 }
-
+/* .popup_email {
+    display: flex;
+    flex-direction: column;
+} */
+.email {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #0D606F;
+    margin: 10px 0 5px 0;
+}
+.email_input {
+    background: #FFFFFF;
+    box-shadow: inset 0px 0px 3px rgba(13, 96, 111, 0.08), inset 0px 2px 3px rgba(13, 96, 111, 0.16);
+    border-radius: 10px;
+    font-size: 43px;
+}
+/* .popup_pass {
+    display: flex;
+    flex-direction: column;
+} */
+.pass {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #0D606F;
+    margin: 20px 0 5px 0;
+}
+.pass_input {
+    background: #FFFFFF;
+    box-shadow: inset 0px 0px 3px rgba(13, 96, 111, 0.08), inset 0px 2px 3px rgba(13, 96, 111, 0.16);
+    border-radius: 10px;
+    font-size: 43px;
+}
+.signin_button {
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    color: #FFFFFF;
+    background: #0D606F;
+    box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    border-radius: 10px;
+    cursor: pointer;
+    border: none;
+    transition: all .3s;
+    padding: 15px 240px;
+}
+.signin_button:hover {
+    color: #F2785C;
+}
+.button_signin {
+    padding: 25px 0 0 0;
+}
+.forgotpass {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 18px;
+    /* identical to box height */
+    text-decoration-line: underline;
+    color: #0D606F;
+    text-shadow: 0px 2px 3px rgba(255, 255, 255, 0.16);
+    margin: 10px 0;
+    cursor: pointer;
+}
+.accreg {
+    display: flex;
+    padding: 14px 0 27px 0;
+}
+.account {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 18px;
+    /* identical to box height */
+    color: rgba(13, 96, 111, 0.5);
+    text-shadow: 0px 2px 3px rgba(255, 255, 255, 0.16);
+    padding-right: 3px;
+    margin: 0;
+}
+.reg {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 18px;
+    /* identical to box height */
+    text-decoration-line: underline;
+    color: #0D606F;
+    text-shadow: 0px 2px 3px rgba(255, 255, 255, 0.16);
+    cursor: pointer;
+    margin: 0;
+}
 /* popup закончен */
 
 
