--- a/travel/style.css
+++ b/travel/style.css
@@ -70,6 +70,8 @@ h4 {
     visibility: hidden;
 }
 .pop-up_content {
+    transform: translateY(-750px);
+    transition: all .5s linear;
     /* position: relative; */
     overflow: auto;
     width: 650px;
@@ -89,6 +91,16 @@ h4 {
     line-height: 38px;
     color: #0D606F;
     margin: 25px 0 30px 0;
+}
+.pop-up_name2 {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 38px;
+    color: #0D606F;
+    margin: 25px 0 30px 0;
+    display: none;
 }
 .facebook_button {
     font-family: 'Red Hat Text';
