feat: popup done

--- a/travel/style.css
+++ b/travel/style.css
@@ -69,13 +69,19 @@ h4 {
 .hidden {
     visibility: hidden;
 }
+.none {
+    display: none!important;
+}
+.block {
+    display: block!important;
+}
 .pop-up_content {
     transform: translateY(-750px);
-    transition: all .5s linear;
+    transition: all .4s linear;
     /* position: relative; */
     overflow: auto;
     width: 650px;
-    height: 90%;
+    max-height: 90%;
     background: linear-gradient(177.09deg, #FFFFFF 6.15%, #0D606F 202.69%);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 16px;
@@ -99,7 +105,7 @@ h4 {
     font-size: 32px;
     line-height: 38px;
     color: #0D606F;
-    margin: 25px 0 30px 0;
+    margin: 25px 0 20px 0;
     display: none;
 }
 .facebook_button {
@@ -228,6 +234,26 @@ h4 {
 .signin_button:hover {
     color: #F2785C;
 }
+.signup_button {
+    font-family: 'Red Hat Text';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 26px;
+    color: #FFFFFF;
+    background: #0D606F;
+    box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+    border-radius: 10px;
+    cursor: pointer;
+    border: none;
+    transition: all .3s;
+    padding: 15px 240px;
+    margin: 0 0 10px 0;
+    display: none;
+}
+.signup_button:hover {
+    color: #F2785C;
+}
 .button_signin {
     padding: 25px 0 0 0;
 }
@@ -260,6 +286,19 @@ h4 {
     padding-right: 3px;
     margin: 0;
 }
+.account2 {
+    font-family: 'Aleo';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 18px;
+    /* identical to box height */
+    color: rgba(13, 96, 111, 0.5);
+    text-shadow: 0px 2px 3px rgba(255, 255, 255, 0.16);
+    padding-right: 3px;
+    margin: 0;
+    display: none;
+}
 .reg {
     font-family: 'Aleo';
     font-style: normal;
@@ -273,6 +312,7 @@ h4 {
     cursor: pointer;
     margin: 0;
 }
+
 /* popup закончен */
 
 
@@ -734,9 +774,39 @@ footer {
 
 @media screen and (max-width: 390px) {
     /* Делаем popup для mobile */
-
-
-
+.pop-up_content {
+    width: 350px;
+}
+.facebook_button {
+    padding: 5px 40px;
+}
+.google_button {
+    padding: 5px 50px;
+}
+.email_input {
+    font-size: 30px;
+}
+.pass_input {
+    font-size: 30px;
+}
+.signin_button {
+    padding: 5px 130px;
+}
+.signup_button {
+    padding: 5px 130px;
+}
+.line1_img {
+    width: 140px;
+}
+.line2_img {
+    width: 140px;
+}
+.line3_img1 {
+    width: 300px;
+}
+.line3_img2 {
+    display: none;
+}
     
     .hamburger {
         display: inline-block;
