--- a/travel/style.css
+++ b/travel/style.css
@@ -1,3 +1,4 @@
+path{ fill:inherit; stroke:inherit;}
 html {
     scroll-behavior: smooth;
     /* overflow-x: hidden; */
@@ -541,7 +542,18 @@ header {
     font-size: 32px;
     line-height: 42px;
 }
-
+.ico_arrl {
+    position: absolute;
+    top: 100px;
+    left: 10px;
+    fill: #F2785C;
+}
+.ico_arr {
+    position: absolute;
+    top: 100px;
+    right: 10px;
+    fill: #F2785C;
+}
 .ellipse{
     display: flex;
     justify-content: center;
@@ -954,7 +966,7 @@ footer {
     }
     .ellipse {
         position: absolute;
-        top: 650px;
+        top: 630px;
         left: 172px;
     }
     .ellipse1 {
